# fakedata-provider

./: .dockerignore  .env-example  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .versionrc  Dockerfile  Dockerfile.prod  Makefile  README.md  db-schema.dbml  db-scheme.dbml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  yoyo.ini
.github/workflows/: codeql-analysis.yml  docker-build.yml  docker-production.yml  testing.yml
app/: config.py  db.py  enums.py  main.py  middlewares.py  server.py
app/helpers/: send_event.py
app/models/: address.py  person.py
app/models/db/: event.py
app/models/schema/: healthcheck.py  person.py
app/providers/: address.py  person.py
app/routers/: address.py  healthcheck.py  person.py
database/: db-schema.dbml  init.sql
database/sql/: 001-init.sql  20200917_01_2LxRo-init-database.py  20201026_01_1kkUg-add-new-types-to-event-type.py
database/sql-old/: 001-init-rollback.sql  001-init.sql  999-fill-test-data.sql
deploy/: gunicorn.conf.py  start-prod.sh  start.sh
tests/: conftest.py  test_address_router.py  test_healthcheck_router.py  test_person_router.py
