[tool.poetry]
name = "randomicu-fakedata"
version = "0.0.1"
description = "FastAPI backend for Random.icu Services"
authors = ["pythoninja"]

[tool.poetry.dependencies]
python = "^3.9"
mimesis = "^4.1.2"
fastapi = "^0.62.0"
uvicorn = {extras = ["standard"], version = "^0.13.1"}
asyncpg = "^0.21.0"
databases = {extras = ["postgresql"], version = "^0.3.2"}
SQLAlchemy = "^1.3.21"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
requests = "^2.25.1"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"
flake8-pytest-style = "^1.3.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
