[tool.poetry]
name = "randomicu-fakedata"
version = "0.0.1"
description = "FastAPI backend for Random.icu Services"
authors = ["pythoninja"]

[tool.poetry.dependencies]
python = "^3.9"
mimesis = "^4.1.3"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
asyncpg = "^0.22.0"
databases = {extras = ["postgresql"], version = "^0.4.2"}
SQLAlchemy = "^1.4.11"
python-dotenv = "^0.17.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
requests = "^2.25.1"
pre-commit = "^2.12.1"
flake8 = "^3.9.1"
flake8-pytest-style = "^1.4.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
